--- a/OEBPS/Text/1705.html
+++ b/OEBPS/Text/1705.html
@@ -46,7 +46,7 @@
 四年春三月，太祖率諸將入朝。禮畢，還華州。
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
-七月，東魏遣其將侯景、厙狄干、高敖曹、（元）〔韓〕軌<span class="jiaozhusup">宋本、南本、冊府卷六「元」作「韓」。按韓軌，北齊書卷一五、北史卷五四有傳，雖不載攻圍洛陽事，然此處與侯景等諸將並列，應即其人，今據改。</span>、可朱渾元、莫多婁貸文等圍獨孤信於洛陽。齊神武繼其後。先是，魏帝將幸洛陽拜園陵，會信被圍，詔太祖率軍救信，魏帝亦東。
+七月，東魏遣其將侯景、厙狄干、高敖曹、（元）〔韓〕軌、<span class="jiaozhusup">宋本、南本、冊府卷六「元」作「韓」。按韓軌，北齊書卷一五、北史卷五四有傳，雖不載攻圍洛陽事，然此處與侯景等諸將並列，應即其人，今據改。</span>可朱渾元、莫多婁貸文等圍獨孤信於洛陽。齊神武繼其後。先是，魏帝將幸洛陽拜園陵，會信被圍，詔太祖率軍救信，魏帝亦東。
 </p>
 <p class="em2" id="p14"><a class="gg-link" href="#p14" onclick="return changeColor(this);"></a>
 八月庚寅，太祖至穀城，莫多婁貸文、可朱渾元來逆，臨陣斬貸文，元單騎遁免，悉虜其眾送弘農。遂進軍瀍東。是夕，魏帝幸太祖營，於是景等夜解圍去。及旦，太祖率輕騎追之，至於河上。景等北據河橋，南屬邙山爲陣，與諸軍合戰。太祖馬中流矢，驚逸，遂失所之，因此軍中擾亂。都督李穆下馬授太祖，軍以復振。於是大捷，斬高敖曹及其儀同李猛、西兗州刺史宋顯等，虜其甲士一萬五千，赴河死者以萬數。
@@ -85,7 +85,7 @@
 冬十月，齊神武侵汾、絳，圍玉壁。太祖出軍蒲阪，將擊之。軍至皂莢，齊神武退。太祖度汾追之，遂遁去。
 </p>
 <p class="em2" id="p26"><a class="gg-link" href="#p26" onclick="return changeColor(this);"></a>
-十二月，魏帝狩於華陰，大饗將士。太祖率諸將朝於行在所<span class="jiaozhusup">「行在所」原倒作「行所在」。諸本及北史卷九周本紀上都作「行在所」，今逕乙正。</span>。
+十二月，魏帝狩於華陰，大饗將士。太祖率諸將朝於行在所。<span class="jiaozhusup">「行在所」原倒作「行所在」。諸本及北史卷九周本紀上都作「行在所」，今逕乙正。</span>
 </p>
 <p class="em2" id="p27"><a class="gg-link" href="#p27" onclick="return changeColor(this);"></a>
 九年春，東魏北豫州刺史高仲密舉州來附，太祖帥師迎之，令開府李遠爲前軍。至洛陽，遣開府于謹攻柏谷塢，拔之。
