--- a/OEBPS/Text/1709.html
+++ b/OEBPS/Text/1709.html
@@ -133,7 +133,7 @@
 甲午，帝入鄴城。齊任城王湝先在冀州，齊主至河，遣其侍中斛律孝卿送傳國璽禪位於湝。孝卿未達，被執送鄴。詔去年大赦班宣未及之處，皆從赦例。封齊開府、洛州刺史獨孤永業爲應國公。丙申，以上柱國、越王盛爲相州總管。己亥，詔曰：「自晉州大陣至于平鄴，身殞戰場者，其子即授父本官。」尉遲勤擒齊主及其太子恆於青州。
 </p>
 <p class="em2" id="p42"><a class="gg-link" href="#p42" onclick="return changeColor(this);"></a>
-庚子，詔曰：「僞齊之末，姦佞擅權，濫罰淫刑，動挂羅網<span class="jiaozhusup">「挂」原作「持」，諸本及北史周本紀下、冊府卷一三八「持」都作「挂」，今逕改。</span>，僞右丞相、咸陽王故斛律明月，<span class="jiaozhusup">按北齊書卷一七斛律金附子光傳、北史卷八齊本紀上（北齊書此卷缺，後人以北史補）斛律光死前已由右丞相轉左丞相。凡稱官封，應以最後爲定，此處「右」當作「左」。但諸本及北史、冊府皆同，或所本的詔書已誤，今不改。</span>僞侍中、特進、開府故崔季舒等七人，或功高獲罪，或直言見誅。朕兵以義動，翦除凶暴，表閭封墓，事切下車。宜追贈諡，并窆措。其見存子孫，各隨蔭敘錄。家口田宅沒官者，並還之。」
+庚子，詔曰：「僞齊之末，姦佞擅權，濫罰淫刑，動挂羅網，<span class="jiaozhusup">「挂」原作「持」，諸本及北史周本紀下、冊府卷一三八「持」都作「挂」，今逕改。</span>僞右丞相、咸陽王故斛律明月，<span class="jiaozhusup">按北齊書卷一七斛律金附子光傳、北史卷八齊本紀上（北齊書此卷缺，後人以北史補）斛律光死前已由右丞相轉左丞相。凡稱官封，應以最後爲定，此處「右」當作「左」。但諸本及北史、冊府皆同，或所本的詔書已誤，今不改。</span>僞侍中、特進、開府故崔季舒等七人，或功高獲罪，或直言見誅。朕兵以義動，翦除凶暴，表閭封墓，事切下車。宜追贈諡，并窆措。其見存子孫，各隨蔭敘錄。家口田宅沒官者，並還之。」
 </p>
 <p class="em2" id="p43"><a class="gg-link" href="#p43" onclick="return changeColor(this);"></a>
 辛丑，詔曰：「僞齊叛渙，竊有漳濱，世縱淫風，事窮彫飾。或穿池運石，爲山學海；或層臺累構，概日凌雲。以暴亂之心，極奢侈之事，有一於此，未或弗亡。朕菲食薄衣，以弘風教，追念生民之費，尚想力役之勞。方當易茲弊俗，率歸節儉。其東山、南園及三臺可並毀撤。瓦木諸物，凡入用者，盡賜下民。山園之田，各還本主。」
