--- a/OEBPS/Text/1712.html
+++ b/OEBPS/Text/1712.html
@@ -16,7 +16,7 @@
 周氏率由姬制，內職有序。太祖創基，修衽席以儉約；高祖嗣曆，節情欲於矯枉。宮闈有貫魚之美，戚里無私溺之尤，可謂得人君體也。宣皇外行其志，內逞其欲，溪壑難滿，採擇無厭。恩之所加，莫限廝皂；榮之所及，無隔險詖。於是升蘭殿而正位，踐椒庭而齊體者，非一人焉；階房帷而拖青紫，承恩倖而擁玉帛者，非一族焉。雖辛、癸之荒淫，趙、李之傾惑，曾未足比其髣髴也。民厭苛政，弊事實多，太祖之祚忽諸，特由於此。故敘其事以爲皇后傳云。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
-文帝元皇后，魏孝武帝之妹。初封平原公主，適開府張歡。<span class="jiaozhusup">張森楷云：「北齊書張忻傳（卷二０張瓊傳）作『平陽公主』，『張歡』作『張忻』。『忻』、『歡』誼同，豈避高歡諱改歟。」按錢氏考異卷四０已指出「齊史避諱，改歡爲欣」。</span>歡性貪殘，遇后無禮，又嘗殺后侍婢。后怒，訴之於帝，帝乃執歡殺之。改封后爲馮翊公主，以配太祖，生孝閔帝。大統七年，薨<span class="jiaozhusup">北史卷一四后妃傳下作「大統十七年」。按卷三孝閔帝紀謂帝以大統八年生，其母不當死在前。當從北史。</span>。魏恭帝三年十二月，合葬成陵。孝閔帝踐祚，追尊爲王后。武成初，又追尊爲皇后。
+文帝元皇后，魏孝武帝之妹。初封平原公主，適開府張歡。<span class="jiaozhusup">張森楷云：「北齊書張忻傳（卷二０張瓊傳）作『平陽公主』，『張歡』作『張忻』。『忻』、『歡』誼同，豈避高歡諱改歟。」按錢氏考異卷四０已指出「齊史避諱，改歡爲欣」。</span>歡性貪殘，遇后無禮，又嘗殺后侍婢。后怒，訴之於帝，帝乃執歡殺之。改封后爲馮翊公主，以配太祖，生孝閔帝。大統七年，薨。<span class="jiaozhusup">北史卷一四后妃傳下作「大統十七年」。按卷三孝閔帝紀謂帝以大統八年生，其母不當死在前。當從北史。</span>魏恭帝三年十二月，合葬成陵。孝閔帝踐祚，追尊爲王后。武成初，又追尊爲皇后。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
 文宣叱奴皇后，代人也。太祖爲丞相，納后爲姬，生高祖。天和（元）〔二〕年六月，尊爲皇太后。<span class="jiaozhusup">宋本、南本「元」作「三」。卷五武帝紀事在二年，今從紀改。</span>建德（二）〔三〕年三月癸酉，崩。<span class="jiaozhusup">御覽卷一四０「二」作「三」。按卷五武帝紀叱奴后死於建德三年三月癸酉，御覽是，今據改。</span>四月丁巳，葬〔永〕固陵。<span class="jiaozhusup">「四月」北史卷一四后妃傳下作「五月」。按卷五武帝紀上葬在五月庚申。又諸本「固」上都有「永」字，與武帝紀合，今據補。</span>
