--- a/OEBPS/Text/1715.html
+++ b/OEBPS/Text/1715.html
@@ -16,7 +16,7 @@
 保定中，徵還京，拜雍州牧。<span class="jiaozhusup">英華齊王憲碑作「天和元年徵還，行雍牧」。</span>及晉公護東伐，以尉遲迥爲先鋒，圍洛陽。憲與達奚武、王雄等軍於邙山。自餘諸軍，各分守險要。齊兵數萬，奄出軍後，諸軍恇駭，並各退散。唯憲與王雄、達奚武率眾拒之。而雄爲齊人所斃，三軍震懼。憲親自督勵，眾心乃安。時晉公護執政，雅相親委，賞罰之際，皆得預焉。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
-天和三年，以憲爲大司馬，治小冢宰，雍州牧如故。<span class="jiaozhusup">英華齊王憲碑稱「二年（天和）拜大司馬，仍理小冢宰」。</span>四年，齊將獨孤永業來寇，盜殺孔城防主能奔達，以城應之。詔憲與柱國李穆將兵出宜陽，築崇德等五城，絕其糧道。齊將斛律明月率眾四萬，築壘洛南。五年，憲涉洛邀之，明月遁走。憲追之，及于安業<span class="jiaozhusup">北齊書卷一七斛律金附子光傳、文苑英華卷六五０庾信移齊河陽執事文「業」作「鄴」。</span>，屢戰而還。是歲，明月又率大眾於汾北築城，西至龍門。晉公護謂憲曰：「寇賊充斥，戎馬交馳，遂使疆埸之間，生民委弊。豈得坐觀屠滅，而不思救之。汝謂計將安出？」曰：「如憲所見，兄宜暫出同州，以爲威勢，憲請以精兵居前，隨機攻取。非惟邊境清寧，亦當別有克獲。」護然之。
+天和三年，以憲爲大司馬，治小冢宰，雍州牧如故。<span class="jiaozhusup">英華齊王憲碑稱「二年（天和）拜大司馬，仍理小冢宰」。</span>四年，齊將獨孤永業來寇，盜殺孔城防主能奔達，以城應之。詔憲與柱國李穆將兵出宜陽，築崇德等五城，絕其糧道。齊將斛律明月率眾四萬，築壘洛南。五年，憲涉洛邀之，明月遁走。憲追之，及于安業，<span class="jiaozhusup">北齊書卷一七斛律金附子光傳、文苑英華卷六五０庾信移齊河陽執事文「業」作「鄴」。</span>屢戰而還。是歲，明月又率大眾於汾北築城，西至龍門。晉公護謂憲曰：「寇賊充斥，戎馬交馳，遂使疆埸之間，生民委弊。豈得坐觀屠滅，而不思救之。汝謂計將安出？」曰：「如憲所見，兄宜暫出同州，以爲威勢，憲請以精兵居前，隨機攻取。非惟邊境清寧，亦當別有克獲。」護然之。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
 六年，乃遣憲率眾二萬，出自龍門。齊將新蔡王王康德以憲兵至，潛軍宵遯。憲乃西歸。仍掘移汾水，水南堡壁，復入於齊。齊人謂略不及遠，遂弛邊備。憲乃渡河，攻其伏龍等四城，二日盡拔。又進攻張壁，克之，獲其軍實，夷其城壘。斛律明月時在華谷，弗能救也，北攻姚襄城，陷之。<span class="jiaozhusup">北史卷五八周室諸王傳、御覽卷三０九「北」上有「乃」字。按攻陷姚襄城者乃斛律光之齊軍，無「乃」字，似周軍攻陷姚襄城。疑當有「乃」字。</span>時汾州又見圍日久，糧援路絕。憲遣柱國宇文盛運粟以饋之。憲自入兩乳谷，襲克齊柏社城，進軍姚襄。齊人嬰城固守。憲使柱國、譚公會築石殿城，以爲汾州之援。齊平原王段孝先、蘭陵王高長恭引兵大至，憲命將士陣而待之。大將軍韓歡爲齊人所乘，遂以奔退，憲身自督戰，齊眾稍卻。會日暮，乃各收軍。
