--- a/OEBPS/Text/1716.html
+++ b/OEBPS/Text/1716.html
@@ -43,7 +43,7 @@
 達雅好節儉，食無兼膳，侍姬不過數人，皆衣綈衣。又不營資產，國無儲積。左右嘗以爲言，達從容應之曰：「君子憂道不憂貧，何煩於此。」三年，進爵爲王。出爲益州總管。高祖東伐，以爲右一軍總管。<span class="jiaozhusup">卷六武帝紀下建德四年（五七五年）七月伐齊，無左右軍名號；次年，再伐齊，右一軍總管是越王盛，這裏紀載似有誤。</span>齊淑妃馮氏，尤爲齊後主所幸，齊平見獲，帝以達不邇聲色，特以馮氏賜之。宣帝即位，進位上柱國。大象元年，拜大右弼。其年，詔以潞州上黨郡邑萬戶爲代。達出就國。二年，朝京。其年冬，爲隋文帝所害，及其世子執、弟蕃國公轉等，國除。
 </p>
 <p class="em2" id="p12"><a class="gg-link" href="#p12" onclick="return changeColor(this);"></a>
-冀康公通，字屈率突。武成初，封冀國公，邑萬戶。天和六年十月，薨。子絢嗣。建德三年，進爵爲王。大象中，爲隋文帝所害<span class="jiaozhusup">北史卷五八周室諸王傳「大象」作「大定」。</span>，國除。
+冀康公通，字屈率突。武成初，封冀國公，邑萬戶。天和六年十月，薨。子絢嗣。建德三年，進爵爲王。大象中，爲隋文帝所害，<span class="jiaozhusup">北史卷五八周室諸王傳「大象」作「大定」。</span>國除。
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
 滕聞王逌，字爾固突。少好經史，解屬文。武成初，封滕國公，邑萬戶。天和末，拜大將軍。建德初，進位柱國。三年，進爵爲王。六年，爲行軍總管，與齊王憲征稽胡。逌破其渠帥穆友等，<span class="jiaozhusup">卷四九稽胡傳、北史卷九六稽胡傳「友」都作「支」。</span>斬首八千級。還，除河陽總管。宣政元年，進位上柱國。其年，伐陳，詔逌爲元帥，節度諸軍事。大象元年五月，詔以荊州新野郡邑萬戶爲滕。逌出就國。二年，朝京。其年冬，爲隋文帝所害，并子懷德公祐、祐弟箕國公裕、弟禮禧等，國除。逌所著文章，頗行於世。
