--- a/OEBPS/Text/1717.html
+++ b/OEBPS/Text/1717.html
@@ -55,7 +55,7 @@
 與父兄誅衛可孤之後，廣陽王元深以岳爲帳內軍主。又表爲彊弩將軍。後與兄勝俱鎮恆州。州陷，投爾朱榮。榮待之甚厚，以爲別將，尋爲都督。每居帳下，與計事，多與榮意合，益重之。榮士馬既眾，遂與元天穆謀入匡朝廷。謂岳曰：「今女主臨朝，政歸近習。盜賊蜂起，海內沸騰，王師屢出，覆亡相繼。吾累世受恩，義同休戚。今欲親率士馬，電赴京師，內除君側，外清逆亂。取勝之道，計將安出？」岳對曰：「夫立非常之事，必俟非常之人。將軍士馬精彊，位任隆重。若首舉義旗，伐叛匡主，何往而不剋，何向而不摧。古人云：『朝謀不及夕，言發不俟駕』，此之謂矣。」榮與天穆相顧良久，曰：「卿此言，真丈夫之志也。」
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
-未幾而魏孝明帝暴崩，榮疑有故，乃舉兵赴洛。配岳甲卒二千爲先驅，至河陰。榮既殺害朝士，時齊神武爲榮軍都督，勸榮稱帝，左右多欲同之，榮疑未決。岳乃從容進而言曰：「將軍首舉義兵，共除姦逆，功勤未立，逆有此謀，可謂速禍，未見其福。」榮尋亦自悟，乃尊立孝莊。岳又勸榮誅齊神武以謝天下。左右咸言：「高歡雖復庸疏，言不思難，今四方尚梗，事藉武臣，請捨之，收其後效。」榮乃止。以定策功，授前將軍、太中大夫，賜爵樊城（郡）〔鄉〕男<span class="jiaozhusup">張森楷云：「男例不得食郡，郡字非也。魏書（卷八０）賀拔勝傳作『鄉男』，當是。」按北史卷四九賀拔允附弟岳傳「郡」也作「鄉」。張說是，今據改。</span>。復爲榮前軍都督，破葛榮於滏口。遷平東將軍、金紫光祿大夫。坐事免。詔尋復之。從平元顥，轉左光祿大夫、武衛將軍。
+未幾而魏孝明帝暴崩，榮疑有故，乃舉兵赴洛。配岳甲卒二千爲先驅，至河陰。榮既殺害朝士，時齊神武爲榮軍都督，勸榮稱帝，左右多欲同之，榮疑未決。岳乃從容進而言曰：「將軍首舉義兵，共除姦逆，功勤未立，逆有此謀，可謂速禍，未見其福。」榮尋亦自悟，乃尊立孝莊。岳又勸榮誅齊神武以謝天下。左右咸言：「高歡雖復庸疏，言不思難，今四方尚梗，事藉武臣，請捨之，收其後效。」榮乃止。以定策功，授前將軍、太中大夫，賜爵樊城（郡）〔鄉〕男。<span class="jiaozhusup">張森楷云：「男例不得食郡，郡字非也。魏書（卷八０）賀拔勝傳作『鄉男』，當是。」按北史卷四九賀拔允附弟岳傳「郡」也作「鄉」。張說是，今據改。</span>復爲榮前軍都督，破葛榮於滏口。遷平東將軍、金紫光祿大夫。坐事免。詔尋復之。從平元顥，轉左光祿大夫、武衛將軍。
 </p>
 <p class="em2" id="p17"><a class="gg-link" href="#p17" onclick="return changeColor(this);"></a>
 時万俟醜奴僭稱大號，關中騷動，朝廷深以爲憂。榮將遣岳討之。岳私謂其兄勝曰：「醜奴擁秦、隴之兵，足爲勍敵。若岳往而無功，罪責立至；假令剋定，恐讒愬生焉。」勝曰：「汝欲何計自安？」岳曰：「請爾朱氏一人爲元帥，岳副貳之，則可矣。」勝然之，乃請於榮。榮大悅，乃以天光爲使持節、督二雍二岐諸軍事、<span class="jiaozhusup">魏書卷七五爾朱天光傳作「乃除天光使持節、都督雍岐二州諸軍事」。按這裏「督」上應有「都」字。「二雍二岐」與「雍岐二州」不知孰是。</span>驃騎大將軍、雍州刺史，以岳爲持節、假衛將軍、左大都督，又以征西將軍代郡侯莫陳悅爲右〔大〕都督，<span class="jiaozhusup">魏書卷八０侯莫陳悅傳、北史卷四九賀拔允附弟岳傳、同卷侯莫陳悅傳，「右都督」都作「右廂大都督」。魏書卷七五爾朱天光傳作「大都督」。按賀拔岳和侯莫陳悅分統左右廂，岳爲大都督，悅不應只是都督，這裏脫「大」字，上引諸條可證，今據補。</span>並爲天光之副以討之。時赤水蜀賊，阻兵斷路。天光之眾，不滿二千。及軍次潼關，天光有難色。岳曰：「蜀賊草竊而已，公尚遲疑，若遇大敵，將何以戰。」天光曰：「今日之事，一以相委，公宜爲吾制之。」於是進軍，賊拒戰於渭北，破之，獲馬二千疋，軍威大振。
