--- a/OEBPS/Text/1719.html
+++ b/OEBPS/Text/1719.html
@@ -106,7 +106,7 @@
 使持節、太尉、柱國大將軍、大都督、尚書左僕射、隴右行臺、少師、隴西郡開國公李虎，
 </p>
 <p class="em2" id="p33"><a class="gg-link" href="#p33" onclick="return changeColor(this);"></a>
-使持節、太傅、柱國大將軍、大宗伯、大司徒、廣陵王元欣<span class="jiaozhusup">北史卷六０傳末「大宗伯」作「大宗師」。按元欣是宗室，疑作「大宗師」是。</span>，
+使持節、太傅、柱國大將軍、大宗伯、大司徒、廣陵王元欣，<span class="jiaozhusup">北史卷六０傳末「大宗伯」作「大宗師」。按元欣是宗室，疑作「大宗師」是。</span>
 </p>
 <p class="em2" id="p34"><a class="gg-link" href="#p34" onclick="return changeColor(this);"></a>
 使持節、太保、柱國大將軍、大都督、大宗伯、趙郡開國公李弼，
