--- a/OEBPS/Text/1725.html
+++ b/OEBPS/Text/1725.html
@@ -37,7 +37,7 @@
 寶夤敗後，景還洛。朝廷先聞景有諫言，故免之。除奉車都尉。汝陽王元叔昭爲隴右大行臺，啟景爲行臺郎中。賀拔岳爲大都督，又以景爲從事中郎。太祖平侯莫陳悅，除景洛陽郡守，<span class="jiaozhusup">張森楷云：「『洛』疑當作『略』，以略陽是隴右地，而洛陽非宇文泰此時所有。」</span>尋兼行臺左丞，留守原州。魏孝武西遷，封高陽縣伯，邑三百戶。遷散騎常侍、行臺尚書，加瀛州刺史。大統初，行涇州事。後以疾卒。
 </p>
 <p class="em2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
-楊寬字景仁，<span class="jiaozhusup">北史卷四一楊敷附叔父寬傳「景」作「蒙」。</span>弘農華陰人也。祖恩，魏鎮遠將軍、河間內史。<span class="jiaozhusup">北史本傳「內史」作「太守」。按郡稱太守，王國稱內史。今不知恩任職在何時，河間爲郡爲國無可考。</span>父鈞，博學彊識，舉秀才，拜大理平，轉廷尉正。累遷，歷洛陽令、左中郎將（軍）、<span class="jiaozhusup">張森楷云：「左中郎無將軍之名，『軍』字衍文。」張說是，今據刪。</span>華州大中正、河南尹、廷尉卿、安北將軍、七兵尚書、北道大行臺、恆州刺史、懷朔鎮將（軍）<span class="jiaozhusup">張森楷以爲「軍」字衍。按北史本傳無「軍」字，今據刪。</span>，卒於鎮。贈侍中、司空公，追封臨貞縣伯，諡曰恭。
+楊寬字景仁，<span class="jiaozhusup">北史卷四一楊敷附叔父寬傳「景」作「蒙」。</span>弘農華陰人也。祖恩，魏鎮遠將軍、河間內史。<span class="jiaozhusup">北史本傳「內史」作「太守」。按郡稱太守，王國稱內史。今不知恩任職在何時，河間爲郡爲國無可考。</span>父鈞，博學彊識，舉秀才，拜大理平，轉廷尉正。累遷，歷洛陽令、左中郎將（軍）、<span class="jiaozhusup">張森楷云：「左中郎無將軍之名，『軍』字衍文。」張說是，今據刪。</span>華州大中正、河南尹、廷尉卿、安北將軍、七兵尚書、北道大行臺、恆州刺史、懷朔鎮將（軍），<span class="jiaozhusup">張森楷以爲「軍」字衍。按北史本傳無「軍」字，今據刪。</span>卒於鎮。贈侍中、司空公，追封臨貞縣伯，諡曰恭。
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
 寬少有大志，每與諸兒童遊處，必擇高大之物而坐之，見者咸異焉。及長，頗解屬文，尤尚武藝。弱冠，除奉朝請。屬鈞出鎮恆州，請從展效，乃改授將軍、高闕戍主。時茹茹既亂，其主阿那瑰來奔，魏帝遣使納之，詔鈞率兵衛送。寬亦從，以功拜行臺郎中。時北邊賊攻圍鎮城，鈞卒，城民等推寬守禦。尋而城陷，寬乃北走茹茹。後討鎮賊，破之，寬始得還朝。
@@ -127,7 +127,7 @@
 十七年，太祖遣大將軍達奚武經略漢川，以帶韋爲治行臺左丞，從軍南討。時梁宜豐侯蕭循守南鄭，武攻之未拔。乃令帶韋入城說循曰：「足下所固者險，所恃者援，所守者民。今王師深入棧道，長驅漢川，此則所憑之險不足固也；武興陷沒於前，白馬破亡於後，自餘川谷酋豪，路阻而不敢進，此則所望之援不可恃也；夫顧親戚，懼誅夷，貪榮慕利，此生人常也，今大兵總至，長圍四合，戮逃亡以勸安居，賞先降以招後服，人人懷轉禍之計，家家圖安堵之謀，此則所部之民不可守也。且足下本朝喪亂，社稷無主，盡忠將何所託，死節不足成名，竊爲足下不取也。僕聞賢者相時而動，智者因變立功。當今爲足下計者，莫若肉袒軍門，歸命下吏，免生民於塗炭，全髮膚於孝道。必當紆青拖紫，裂土分珪，名重當時，業光後嗣。豈若進退無據，身名俱滅者哉。」循然之，後乃降。
 </p>
 <p class="em2" id="p40"><a class="gg-link" href="#p40" onclick="return changeColor(this);"></a>
-魏廢帝元年，出爲解縣令。二年，加授驃騎將軍、左光祿大夫。明年，轉汾陰令。發摘姦伏，百姓畏而懷之。世宗初，入爲地官上士。武成元年，授帥都督、治御伯下大夫，遷武藏下大夫。保定三年，授大都督。四年，加儀同三司、中外府掾。天和（六）〔二〕年<span class="jiaozhusup">北史柳虯傳附帶韋「六」作「二」。按下紀年有「三年」「五年」。下文稱譙王儉爲益州總管，據卷五武帝紀上事在天和五年（五七０年），知「三年」「五年」也都是天和三年、五年。這裏當從北史作「二年」。今據改。</span>，封康城縣男，邑五百戶，轉職方中大夫。三年，授兵部中大夫。雖頻徙職，仍領武藏。尋丁母憂。起爲職方中大夫。五年，轉武藏中大夫。俄遷驃騎大將軍、開府儀同三司。凡居劇職，十有餘年，處斷無滯，官曹清肅。
+魏廢帝元年，出爲解縣令。二年，加授驃騎將軍、左光祿大夫。明年，轉汾陰令。發摘姦伏，百姓畏而懷之。世宗初，入爲地官上士。武成元年，授帥都督、治御伯下大夫，遷武藏下大夫。保定三年，授大都督。四年，加儀同三司、中外府掾。天和（六）〔二〕年，<span class="jiaozhusup">北史柳虯傳附帶韋「六」作「二」。按下紀年有「三年」「五年」。下文稱譙王儉爲益州總管，據卷五武帝紀上事在天和五年（五七０年），知「三年」「五年」也都是天和三年、五年。這裏當從北史作「二年」。今據改。</span>封康城縣男，邑五百戶，轉職方中大夫。三年，授兵部中大夫。雖頻徙職，仍領武藏。尋丁母憂。起爲職方中大夫。五年，轉武藏中大夫。俄遷驃騎大將軍、開府儀同三司。凡居劇職，十有餘年，處斷無滯，官曹清肅。
 </p>
 <p class="em2" id="p41"><a class="gg-link" href="#p41" onclick="return changeColor(this);"></a>
 時譙王儉爲益州總管，漢王贊爲益州刺史。高祖乃以帶韋爲益州總管府長史，領益州別駕，輔弼二王，總知軍民事。建德中，大軍東討，徵帶韋爲前軍總管齊王憲府長史。齊平，以功授上開府儀同大將軍，進爵爲公，增邑一千戶。陳王純出并州，<span class="jiaozhusup">北史柳虯傳附帶韋作「鎮并州」，疑這裏「出」下脫「鎮」字。</span>以帶韋爲并州司會、并州總管府長史。六年，卒於位，時年五十五。諡曰愷。子祚嗣。少有名譽。大象末，宣納上士。
