--- a/OEBPS/Text/1726.html
+++ b/OEBPS/Text/1726.html
@@ -163,7 +163,7 @@
 綽弟椿，字令欽。性廉慎，沉勇有決斷。正光中，關右賊亂，椿應募討之，授盪寇將軍。累功（封）遷奉朝請、<span class="jiaozhusup">冊府卷三五五「功」下無「封」字。張森楷云：「封下當有缺文。」按「封」字也可能是衍文，今據冊府刪。</span>厲威將軍、中散大夫，賜爵美陽子，加都督、持節、平西將軍、太中大夫。大統初，拜鎮東將軍、金紫光祿大夫，賜姓賀蘭氏。四年，出爲武都郡守。改授西夏州長史，除帥都督，行弘農郡事。
 </p>
 <p class="em2" id="p52"><a class="gg-link" href="#p52" onclick="return changeColor(this);"></a>
-椿當官彊濟，<span class="jiaozhusup">「彊」原作「疆」。張元濟云：「諸本同誤，當作『彊』。」按這是刊本之誤，張說是，今逕改。</span>特爲太祖所知。十四年，置當州鄉帥<span class="jiaozhusup">宋本作「党州鄉師」，南本、北本、汲本作「黨州鄉帥」。北史卷六三蘇綽附弟椿傳「帥」作「師」。張元濟云：「按鄉師見周禮地官。」按鄉帥指領鄉兵的帥都督，卷三二柳敏傳「加帥都督，領本鄉兵」，卷三七郭彥傳「大統十二年初選當州首望統領鄉兵，除帥都督」，都可證。這裏作「當州鄉帥」不誤。</span>，自非鄉望允當眾心，不得預焉。乃令驛追椿領鄉兵。其年，破槃頭氐有功，<span class="jiaozhusup">「氐」原作「氏」。諸本和北史本傳都作「氐」。今逕改。</span>除散騎常侍，加大都督。十六年，征隨郡，軍還，除武功郡守。既爲本邑，以清儉自居，小大之政，必盡忠恕。尋授使持節、車騎大將軍、儀同三司，進爵爲侯。武成二年，進位驃騎大將軍、開府儀同三司、大都督。保定三年，卒。子植嗣。
+椿當官彊濟，<span class="jiaozhusup">「彊」原作「疆」。張元濟云：「諸本同誤，當作『彊』。」按這是刊本之誤，張說是，今逕改。</span>特爲太祖所知。十四年，置當州鄉帥，<span class="jiaozhusup">宋本作「党州鄉師」，南本、北本、汲本作「黨州鄉帥」。北史卷六三蘇綽附弟椿傳「帥」作「師」。張元濟云：「按鄉師見周禮地官。」按鄉帥指領鄉兵的帥都督，卷三二柳敏傳「加帥都督，領本鄉兵」，卷三七郭彥傳「大統十二年初選當州首望統領鄉兵，除帥都督」，都可證。這裏作「當州鄉帥」不誤。</span>自非鄉望允當眾心，不得預焉。乃令驛追椿領鄉兵。其年，破槃頭氐有功，<span class="jiaozhusup">「氐」原作「氏」。諸本和北史本傳都作「氐」。今逕改。</span>除散騎常侍，加大都督。十六年，征隨郡，軍還，除武功郡守。既爲本邑，以清儉自居，小大之政，必盡忠恕。尋授使持節、車騎大將軍、儀同三司，進爵爲侯。武成二年，進位驃騎大將軍、開府儀同三司、大都督。保定三年，卒。子植嗣。
 </p>
 <p class="em2" id="p53"><a class="gg-link" href="#p53" onclick="return changeColor(this);"></a>
 史臣曰：書云：「惟后非賢弗乂，惟賢非后罔食」。是以知人則哲，有國之所先；用之則行，爲下之常道。若乃庖廚、胥靡、種德、微管之臣，罕聞於世；黜魯、逐荊、抱關、執戟之士，無乏於時。斯固典謩所以昭則，風雅所以興刺也。誠能監前事之得喪，勞虛己於吐握，其知賢也必用，其授爵也勿疑，則舜禹湯武之德可連衡矣，稷契伊呂之流可比肩矣。
