--- a/OEBPS/Text/1727.html
+++ b/OEBPS/Text/1727.html
@@ -19,7 +19,7 @@
 自魏末離亂，孝武西遷，朝章禮度，湮墜咸盡。辯因時制宜，皆合軌度。性彊記默契，能斷大事。凡所創制，處之不疑。累遷尚書右僕射。<span class="jiaozhusup">北史本傳作「累遷尚書令」。疑各自刪節周書，但書令而略僕射是可以的，書僕射而略令，乃是刪節失當。</span>世宗即位，進位大將軍。帝嘗與諸公幸其第，儒者榮之。出爲宜州刺史。薨，配食太祖廟庭。子慎。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
-初，太祖欲行周官，命蘇綽專掌其事。未幾而綽卒，乃令辯成之。於是依周禮建六官，<span class="jiaozhusup">按此下至「魏恭帝三年始命行之」凡一百二十六字。北史本傳刪略只二十三字。由此知今本盧辯傳非據北史刪節。在「始命行之」下北史略敘官制四十五字，今本周書無。</span>置公、卿、大夫、士，並撰次朝儀，車服器用，多依古禮，革漢、魏之法。事並施行。今錄辯所述六官著之於篇。天官府<span class="jiazhu">管冢宰等眾職</span>，地官府<span class="jiazhu">領司徒等眾職</span>，春官府<span class="jiazhu">領宗伯等眾職</span>，夏官府<span class="jiazhu">領司馬等眾職</span>，秋官府<span class="jiazhu">領司寇等眾職</span>，冬官府<span class="jiazhu">領司空等眾職</span>。史雖具載，文多不錄。
+初，太祖欲行周官，命蘇綽專掌其事。未幾而綽卒，乃令辯成之。於是依周禮建六官，<span class="jiaozhusup">按此下至「魏恭帝三年始命行之」凡一百二十六字。北史本傳刪略只二十三字。由此知今本盧辯傳非據北史刪節。在「始命行之」下北史略敘官制四十五字，今本周書無。</span>置公、卿、大夫、士，並撰次朝儀，車服器用，多依古禮，革漢、魏之法。事並施行。今錄辯所述六官著之於篇。天官府，<span class="jiazhu">管冢宰等眾職</span>地官府，<span class="jiazhu">領司徒等眾職</span>春官府，<span class="jiazhu">領宗伯等眾職</span>夏官府，<span class="jiazhu">領司馬等眾職</span>秋官府，<span class="jiazhu">領司寇等眾職</span>冬官府。<span class="jiazhu">領司空等眾職</span>史雖具載，文多不錄。
 </p>
 <p class="em2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
 辯所述六官，太祖以魏恭帝三年始命行之。自茲厥後，世有損益。<span class="jiaozhusup">以下北史本傳敘明帝、武帝二朝官制增省凡一百七十二字，今本周書無。按隋書卷二七百官志中記北周官制，末云：「所設官名，訖於周末，多有改更，並具盧傳，不復重序云。」知原本盧傳詳記「多有改更」之處。今本卻只於下略敘宣帝時的改制，寥寥數語。北史盧傳當也據周書而有刪節，今出於今本周書外者尚一百七十二字，可見這卷的疏略。</span>宣帝嗣位，事不師古，官員班品，隨意變革。至如初置四輔官，及六府諸司復置中大夫，并御正、內史增置上大夫等，則載於外史。餘則朝出夕改，莫能詳錄。于時雖行周禮，其內外眾職，又兼用秦漢等官。今略舉其名號及命數，附之於左。<span class="jiaozhusup">按下所載官名命數大致和北史同，各有訛脫。通典卷三九載周官品最詳備，周書、北史只舉六官以外的官，通典並舉無遺。通志卷一五七盧辯傳末也可參考。以下但舉顯然訛脫之處。</span>其紀傳內更有餘官而於此不載者，亦史闕文也。
@@ -76,7 +76,7 @@
 曠野、橫野將軍，殿中、員外二司馬，冠軍輔國府、正六命州列曹參軍。<span class="jiazhu">右正一命。</span>
 </p>
 <p class="em2" id="p23"><a class="gg-link" href="#p23" onclick="return changeColor(this);"></a>
-武威、武牙將軍，淮海、山林二都尉，鎮遠建忠中堅寧朔寧遠揚烈伏波輕車府列曹參軍。<span class="jiazhu">右一命。</span>。
+武威、武牙將軍，淮海、山林二都尉，鎮遠建忠中堅寧朔寧遠揚烈伏波輕車府列曹參軍。<span class="jiazhu">右一命。</span>
 </p>
 <p class="em2" id="p24"><a class="gg-link" href="#p24" onclick="return changeColor(this);"></a>
 周制：封郡縣五等爵者，皆加開國；授柱國大將軍、開府、儀同者，並加使持節、大都督；其開府又加〔驃騎大將軍、侍中；其儀同又加〕車騎大將軍、散騎常侍；<span class="jiaozhusup">按周制驃騎大將軍例加開府儀同三司，車騎大將軍例加儀同三司。今脫去十二字，變成「其開府又加車騎大將軍」，和制度不合，今據北史、通志補。</span>其授總管刺史，則加使持節、諸軍事。以此爲常。大象元年，詔總管刺史及行兵者，加持節，餘悉罷之。建德四年，增置上柱國大將軍，改儀同三司爲儀同大將軍。
