--- a/OEBPS/Text/1734.html
+++ b/OEBPS/Text/1734.html
@@ -34,7 +34,7 @@
 廢帝二年，爲雍州刺史。先是，路側一里置一土候，經雨頹毀，每須修之。自孝寬臨州，乃勒部內當候處植槐樹代之。既免修復，行旅又得庇廕。周文後見，怪問知之，曰：「豈得一州獨爾，當令天下同之。」於是令諸州夾道一里種一樹，十里種三樹，百里種五樹焉。
 </p>
 <p class="em2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
-恭帝元年，以大將軍與燕國公于謹伐江陵，平之，以功封穰縣公。還，拜尚書右僕射，賜姓宇文氏。（二）〔三〕年，周文北巡<span class="jiaozhusup">宋本和北史「二」作「三」。按卷二文帝紀下北巡在魏恭帝三年，今據改。</span>，命孝寬還鎮玉壁。周孝閔帝踐阼，拜小司徒。明帝初，參麟趾殿學士，考校圖籍。
+恭帝元年，以大將軍與燕國公于謹伐江陵，平之，以功封穰縣公。還，拜尚書右僕射，賜姓宇文氏。（二）〔三〕年，周文北巡，<span class="jiaozhusup">宋本和北史「二」作「三」。按卷二文帝紀下北巡在魏恭帝三年，今據改。</span>命孝寬還鎮玉壁。周孝閔帝踐阼，拜小司徒。明帝初，參麟趾殿學士，考校圖籍。
 </p>
 <p class="em2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
 保定初，以孝寬立勳玉壁，遂於玉壁置勳州，仍授勳州刺史。齊人遣使至玉壁，求通互市。晉公護以其相持日久，絕無使命，一日忽來求交易，疑別有故。又以皇姑、皇世母先沒在彼，因其請和之際，或可致之。遂令司門下大夫尹公正至玉壁，共孝寬詳議。孝寬乃於郊盛設供帳，令公正接對使人，兼論皇家親屬在東之意。使者辭色甚悅。<span class="jiaozhusup">通志本傳作「於是使者忻然，辭色甚悅」。按通志多據北史，此傳卻有多出的辭句，可能是傳本北史脫去，也可能是周書原文。</span>時又有汾州胡抄得關東人，孝寬復放東還，並致書一牘，具陳朝廷欲敦鄰好。遂以禮送皇姑及護母等。
@@ -112,7 +112,7 @@
 時晉公護執政，廣營第宅。嘗召敻至宅，訪以政事。敻仰視其堂，徐而歎曰：「酣酒嗜音，峻宇雕牆，有一於此，未或弗亡。」護不悅。有識者以爲知言。
 </p>
 <p class="em2" id="p35"><a class="gg-link" href="#p35" onclick="return changeColor(this);"></a>
-陳遣其尚書周弘正來聘，素聞敻名，請與相見。朝廷許之。弘正乃造敻，談謔盈日，恨相遇之晚。後請敻至賓館，敻〔不〕時赴<span class="jiaozhusup">局本和北史本傳「時」上有「不」字，局本當從北史補。冊府卷八八二、御覽卷四０八作「未赴」，無「時」字。按文義應有「不」或「未」字，今從局本補「不」字。</span>。弘正仍贈詩曰：「德星猶未動，真車詎肯來。」其爲時所欽挹如此。
+陳遣其尚書周弘正來聘，素聞敻名，請與相見。朝廷許之。弘正乃造敻，談謔盈日，恨相遇之晚。後請敻至賓館，敻〔不〕時赴。<span class="jiaozhusup">局本和北史本傳「時」上有「不」字，局本當從北史補。冊府卷八八二、御覽卷四０八作「未赴」，無「時」字。按文義應有「不」或「未」字，今從局本補「不」字。</span>弘正仍贈詩曰：「德星猶未動，真車詎肯來。」其爲時所欽挹如此。
 </p>
 <p class="em2" id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a>
 武帝嘗與敻夜宴，大賜之縑帛，令侍臣數人負以送出。敻唯取一疋，示承恩旨而已。帝以此益重之。孝寬爲延州總管，敻至州與孝寬相見。將還，孝寬以所乘馬及轡勒與敻。敻以其華飾，心弗欲之。笑謂孝寬曰：「昔人不棄遺簪墜履者，惡與之同出，不與同歸。吾雖不逮前烈，然捨舊錄新，亦非吾志也。」於是乃乘舊馬以歸。
