--- a/OEBPS/Text/1736.html
+++ b/OEBPS/Text/1736.html
@@ -55,7 +55,7 @@
 頃之，御史中尉董紹進策，請圖梁漢。以紹爲行臺、梁州刺史，率士馬向漢中。剛以爲不可，而朝議已決，遂出軍。詔竟無功而還，免爲庶人。除剛潁川郡守，加通直散騎常侍、衛大將軍。
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
-從復弘農。進拜大都督、東道軍司，節度開府李延孫等七軍，攻復陽城，擒太守王智納。轉陳留郡守。東魏行臺吉寧率眾三萬攻陷郡城，剛突出，還保潁川，重行郡事。復爲侯景所破，乃率餘眾赴洛陽。大行臺元海遣剛還郡徵糧。<span class="jiaozhusup">張森楷云：「『海』上當有『季』字，見魏書孝靜紀（卷一二）。」按亦見周書卷二文帝紀下、卷三八元偉傳末。此雙名單稱。</span>時景眾已入潁川，剛於西界招復陽翟二萬戶，轉輸送洛。明年，洛陽不守。剛遠隔敵中，連戰破東魏廣州刺史李仲侃。時侯景別帥陸太、潁川郡守高沖等眾八千人，寇襄城等五郡。剛簡步騎五百，大破沖等。開府李延孫爲長史楊伯簡所害，<span class="jiaozhusup">張森楷云：「李延孫傳（卷四三）『簡』作『蘭』。」按北史百衲本卷六六李延孫傳作「蘭」，殿本作「闌」，通鑑卷一五八也作「蘭」，疑作「簡」誤。</span>剛擊斬之。又攻拔廣州，進軍陽翟。侯景自鄴入魯陽<span class="jiaozhusup">按鄴是東魏都，即使自鄴出兵，也從無自鄴入某地的書法。凡稱自某地入某地者，地必相近，疑「鄴」乃「葉」之訛。魯陽即今魯山縣，和葉（今葉縣）相近。</span>，與剛接戰。旬有三日，旋軍宜陽。時河南城邑，一彼一此。剛復出軍伊、洛，侯景亦度河築城。剛前後下景三郡，獲郡守一人，別破其行臺梅遷，斬首千餘級。除尚書金部郎中。高仲密以北豫州來附，兼大行臺左丞，持節赴潁川節度義軍。師還，剛別破侯景前驅於南陸，復獲其郡守二人。
+從復弘農。進拜大都督、東道軍司，節度開府李延孫等七軍，攻復陽城，擒太守王智納。轉陳留郡守。東魏行臺吉寧率眾三萬攻陷郡城，剛突出，還保潁川，重行郡事。復爲侯景所破，乃率餘眾赴洛陽。大行臺元海遣剛還郡徵糧。<span class="jiaozhusup">張森楷云：「『海』上當有『季』字，見魏書孝靜紀（卷一二）。」按亦見周書卷二文帝紀下、卷三八元偉傳末。此雙名單稱。</span>時景眾已入潁川，剛於西界招復陽翟二萬戶，轉輸送洛。明年，洛陽不守。剛遠隔敵中，連戰破東魏廣州刺史李仲侃。時侯景別帥陸太、潁川郡守高沖等眾八千人，寇襄城等五郡。剛簡步騎五百，大破沖等。開府李延孫爲長史楊伯簡所害，<span class="jiaozhusup">張森楷云：「李延孫傳（卷四三）『簡』作『蘭』。」按北史百衲本卷六六李延孫傳作「蘭」，殿本作「闌」，通鑑卷一五八也作「蘭」，疑作「簡」誤。</span>剛擊斬之。又攻拔廣州，進軍陽翟。侯景自鄴入魯陽，<span class="jiaozhusup">按鄴是東魏都，即使自鄴出兵，也從無自鄴入某地的書法。凡稱自某地入某地者，地必相近，疑「鄴」乃「葉」之訛。魯陽即今魯山縣，和葉（今葉縣）相近。</span>與剛接戰。旬有三日，旋軍宜陽。時河南城邑，一彼一此。剛復出軍伊、洛，侯景亦度河築城。剛前後下景三郡，獲郡守一人，別破其行臺梅遷，斬首千餘級。除尚書金部郎中。高仲密以北豫州來附，兼大行臺左丞，持節赴潁川節度義軍。師還，剛別破侯景前驅於南陸，復獲其郡守二人。
 </p>
 <p class="em2" id="p17"><a class="gg-link" href="#p17" onclick="return changeColor(this);"></a>
 時有流言傳剛東叛，齊神武因設反間，聲遣迎接。剛乃率騎襲其下塢，<span class="jiaozhusup">北史本傳「下」作「丁」。</span>拔之，露板言狀。太祖知剛無貳，乃加賞賚焉。除營州刺史，進爵爲公，增邑二百戶，加大都督、車騎大將軍、儀同三司、散騎常侍。
