--- a/OEBPS/Text/1738.html
+++ b/OEBPS/Text/1738.html
@@ -46,13 +46,13 @@
 天和元年，授江陵總管。三年，遷荊州總管、荊淅等十四州南陽平陽等八防諸軍事、荊州刺史。州既統攝遐長，俗兼夷夏，又南接陳境，東鄰齊寇。謙外禦彊敵，內撫軍民，風化大行，號稱良牧。每年考績，常爲天下最，屢有詔褒美焉。謙隨賀拔勝之在荊州也，雖被親遇，而名位未顯。及踐其位，朝野以爲榮。四年，卒於州。闔境痛惜之，乃共立祠堂，四時祭饗。子曠嗣。
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
-謙性至孝，少喪父，殆將滅性。與弟（訦）〔說〕特相友愛<span class="jiaozhusup">北史本傳「訦」作「說」。按文苑英華卷九０四庾信周大將軍崔說神道碑、新唐書卷七二宰相世系表都作「說」。「訦」字誤，今據改。以下諸「訦」字逕改。</span>，雖復年事並高，名位各重，所有資產，皆無私焉。其居家嚴肅，動遵禮度。曠與說子弘度等，並奉其遺訓云。
+謙性至孝，少喪父，殆將滅性。與弟（訦）〔說〕特相友愛，<span class="jiaozhusup">北史本傳「訦」作「說」。按文苑英華卷九０四庾信周大將軍崔說神道碑、新唐書卷七二宰相世系表都作「說」。「訦」字誤，今據改。以下諸「訦」字逕改。</span>雖復年事並高，名位各重，所有資產，皆無私焉。其居家嚴肅，動遵禮度。曠與說子弘度等，並奉其遺訓云。
 </p>
 <p class="em2" id="p14"><a class="gg-link" href="#p14" onclick="return changeColor(this);"></a>
 曠少溫雅，仁而汎愛。釋褐中外府記室。大象末，位至開府儀同大將軍，淅州刺史。
 </p>
 <p class="em2" id="p15"><a class="gg-link" href="#p15" onclick="return changeColor(this);"></a>
-說本名士約，少鯁直，有節概，膂力過人，尤工騎射。釋褐領軍府錄事，轉諮議參軍。及賀拔勝出牧荊州，以說爲假節、冠軍將軍、防城都督。又隨勝奔梁，復自梁歸國。授衛將軍﹑都督，封安昌縣子，邑三百戶。從太祖復弘農，戰沙苑，皆有功。進爵爲侯，增邑八百戶，除京兆郡守。累遷帥都督、撫軍將軍、通直散騎常侍、大都督、車騎大將軍、儀同三司、都官尚書、定州大中正，改封安固縣侯<span class="jiaozhusup">英華崔說碑作「安國縣侯」。按魏書卷一０六上地形志上博陵郡有安國縣。隋書卷三０地理志中博陵郡義豐縣條云：「舊有安國縣，後齊廢。」地不屬周，但崔說是博陵人，故以本郡一縣爲封號。疑作「安國」是。</span>，增邑三百戶，賜姓宇文氏，并賜名說焉。進爵驃騎大將軍、開府儀同三司，加侍中，<span class="jiaozhusup">英華崔說碑「驃」作「車」。按周制驃騎大將軍例加開府儀同三司和侍中；車騎大將軍加儀同三司，散騎常侍，似碑誤。然碑文此下云：「竇憲連官，單于之寶鼎可致」，用的是車騎將軍典故，不像是傳刻之誤。可能西魏時還未確立上述加官的制度。</span>進爵萬年縣公，增邑通前二千四百戶。除隴州刺史，遷總管涼甘瓜三州諸軍事、涼州刺史。說蒞政彊毅，百姓畏之。齊王憲東征，以說爲行軍長史。軍還，除使持節、崇德安義等十三防熊和（忠）〔中〕等三州諸軍事，<span class="jiaozhusup">錢氏考異卷三二云：「『忠』當作『中』，隋志（卷三０地理志河南郡）新安縣，後周置中州。」按英華崔說碑「忠」正作「中」。錢說是，今據改。</span>崇德防主，加授大將軍，改封安平縣公。建德四年卒，時年六十四。贈鄜延丹綏長五州刺史，諡曰壯。<span class="jiaozhusup">北史本傳和英華崔說碑「壯」作「莊」，唐書卷七二下宰相世系表作「壯」，未知孰是。</span>子弘度，猛毅有父風。大象末，上柱國、武鄉郡公。
+說本名士約，少鯁直，有節概，膂力過人，尤工騎射。釋褐領軍府錄事，轉諮議參軍。及賀拔勝出牧荊州，以說爲假節、冠軍將軍、防城都督。又隨勝奔梁，復自梁歸國。授衛將軍﹑都督，封安昌縣子，邑三百戶。從太祖復弘農，戰沙苑，皆有功。進爵爲侯，增邑八百戶，除京兆郡守。累遷帥都督、撫軍將軍、通直散騎常侍、大都督、車騎大將軍、儀同三司、都官尚書、定州大中正，改封安固縣侯，<span class="jiaozhusup">英華崔說碑作「安國縣侯」。按魏書卷一０六上地形志上博陵郡有安國縣。隋書卷三０地理志中博陵郡義豐縣條云：「舊有安國縣，後齊廢。」地不屬周，但崔說是博陵人，故以本郡一縣爲封號。疑作「安國」是。</span>增邑三百戶，賜姓宇文氏，并賜名說焉。進爵驃騎大將軍、開府儀同三司，加侍中，<span class="jiaozhusup">英華崔說碑「驃」作「車」。按周制驃騎大將軍例加開府儀同三司和侍中；車騎大將軍加儀同三司，散騎常侍，似碑誤。然碑文此下云：「竇憲連官，單于之寶鼎可致」，用的是車騎將軍典故，不像是傳刻之誤。可能西魏時還未確立上述加官的制度。</span>進爵萬年縣公，增邑通前二千四百戶。除隴州刺史，遷總管涼甘瓜三州諸軍事、涼州刺史。說蒞政彊毅，百姓畏之。齊王憲東征，以說爲行軍長史。軍還，除使持節、崇德安義等十三防熊和（忠）〔中〕等三州諸軍事，<span class="jiaozhusup">錢氏考異卷三二云：「『忠』當作『中』，隋志（卷三０地理志河南郡）新安縣，後周置中州。」按英華崔說碑「忠」正作「中」。錢說是，今據改。</span>崇德防主，加授大將軍，改封安平縣公。建德四年卒，時年六十四。贈鄜延丹綏長五州刺史，諡曰壯。<span class="jiaozhusup">北史本傳和英華崔說碑「壯」作「莊」，唐書卷七二下宰相世系表作「壯」，未知孰是。</span>子弘度，猛毅有父風。大象末，上柱國、武鄉郡公。
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
 崔猷字宣猷，博陵安平人，漢尚書寔之十二世孫也。祖挺，魏光州刺史、泰昌縣子，贈輔國將軍、幽州刺史，諡曰景。父孝芬，左光祿大夫、儀同三司，兼吏部尚書，爲齊神武所害。
