--- a/OEBPS/Text/1748.html
+++ b/OEBPS/Text/1748.html
@@ -58,7 +58,7 @@
 建德末，重自以入朝既久，且年過時制，表請還梁。高祖優詔答之曰：「開府漢南杞梓，每軫虛衿；江東竹箭，亟疲延首。故束帛聘申，蒲輪徵伏。加以梁朝舊齒，結綬三世，沐浴榮光，祗承寵渥，不忘戀本，深足嘉尚。而楚材晉用，豈無先哲。方事求賢，義乖來肅。」重固請，乃許焉。遣小司門上士楊（注）〔汪〕送之。<span class="jiaozhusup">張森楷云：「北史『注』作『汪』。據楊汪問禮於沈重，見隋書本傳（卷五六）。此外別無楊注其人，蓋刻誤也。」按張說是，今據改。</span>梁主蕭巋拜重散騎常侍、太常卿。大象二年，來朝京師。開皇三年，卒，年八十四。隋文帝遣舍人蕭子寶祭以少牢，贈使持節、上開府儀同三司、許州刺史。
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
-重學業該博，爲當世儒宗。至於陰陽圖緯，道經釋典，靡不畢綜。又多所撰述，咸得其指要。其行於世者，周禮義三十一卷、<span class="jiaozhusup">隋書卷三二經籍志一作「周官禮義疏四十卷」。</span>儀禮義三十五卷、<span class="jiaozhusup">隋志不載。冊府卷六０六作「二十五卷」。</span>禮記義三十卷、<span class="jiaozhusup">隋志作「禮記義疏四十卷」。</span>毛詩義二十八卷、<span class="jiaozhusup">隋志「義」下有「疏」字。</span>喪服經義五卷、周禮音一卷、儀禮音一卷、禮記音二卷<span class="jiaozhusup">冊府卷六０六作「一卷」。</span>、毛詩音二卷。
+重學業該博，爲當世儒宗。至於陰陽圖緯，道經釋典，靡不畢綜。又多所撰述，咸得其指要。其行於世者，周禮義三十一卷、<span class="jiaozhusup">隋書卷三二經籍志一作「周官禮義疏四十卷」。</span>儀禮義三十五卷、<span class="jiaozhusup">隋志不載。冊府卷六０六作「二十五卷」。</span>禮記義三十卷、<span class="jiaozhusup">隋志作「禮記義疏四十卷」。</span>毛詩義二十八卷、<span class="jiaozhusup">隋志「義」下有「疏」字。</span>喪服經義五卷、周禮音一卷、儀禮音一卷、禮記音二卷、<span class="jiaozhusup">冊府卷六０六作「一卷」。</span>毛詩音二卷。
 </p>
 <p class="em2" id="p17"><a class="gg-link" href="#p17" onclick="return changeColor(this);"></a>
 樊深字文深，河東猗氏人也。早喪母，事繼母甚謹。弱冠好學，負書從師於三河，<span class="jiaozhusup">北史卷八二樊深傳「三河」作「河西」。</span>講習五經，晝夜不倦。魏永安中，隨軍征討，以功除蕩寇將軍，累遷伏波、征虜將軍，中散大夫。嘗讀書見吾丘子，遂歸侍養。
