--- a/OEBPS/Text/1749.html
+++ b/OEBPS/Text/1749.html
@@ -40,7 +40,7 @@
 斌字伯達。年十七，齊公憲召爲記室。早卒。
 </p>
 <p class="em2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
-斌弟雄亮，字信誠。幼有志節，好學不倦。年十二，遭父艱<span class="jiaozhusup">隋書卷四七柳機附弟雄亮傳、北史柳虯傳附見雄亮，云檜死時，「雄亮時年十四」。</span>，幾至滅性。終喪之後，志在復讎。柱國、蔡國公廣欽其名行，引爲記室參軍。年始弱冠，府中文筆，頗亦委之。後竟手刃眾寶於京城。朝野咸重其志節，高祖特恕之。由是知名。大象末，位至賓部下大夫。<span class="jiaozhusup">隋書及北史本傳雄亮在周官至「內史中大夫」。</span>
+斌弟雄亮，字信誠。幼有志節，好學不倦。年十二，遭父艱，<span class="jiaozhusup">隋書卷四七柳機附弟雄亮傳、北史柳虯傳附見雄亮，云檜死時，「雄亮時年十四」。</span>幾至滅性。終喪之後，志在復讎。柱國、蔡國公廣欽其名行，引爲記室參軍。年始弱冠，府中文筆，頗亦委之。後竟手刃眾寶於京城。朝野咸重其志節，高祖特恕之。由是知名。大象末，位至賓部下大夫。<span class="jiaozhusup">隋書及北史本傳雄亮在周官至「內史中大夫」。</span>
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
 杜叔毗字子弼。其先，京兆杜陵人也，徙居襄陽。祖乾光，齊司徒右長史。父漸，梁邊城太守。
