--- a/OEBPS/Text/1751.html
+++ b/OEBPS/Text/1751.html
@@ -64,7 +64,7 @@
 惟古人之有懷，尚或感於知己。況託蕚於霄極，<span class="jiaozhusup">文苑英華卷一二九這句作「況華蕚聯於霄極」，與下「寵渥流於無已」句對，疑是。</span>寵渥流於無已。或小善而必褒，時片言而見美。昔待罪於禹川，歷三考而無紀。獲免戾於明時，遂超隆於宗子。始解印於稽山，即驅傳於湘水。彼南陽之舊國，實天漢之嘉祉。既川岳之形勝，復龍躍之基趾。此首賞之謬及，謂維城之足恃。值諸侯之攜貳，遂留滯於樊川。等勾踐之絕望，同重耳之終焉。望南枝而灑泣，或東顧而潺湲。歸歟之情何極，首丘之思邈然。
 </p>
 <p class="margin2" id="p19"><a class="gg-link" href="#p19" onclick="return changeColor(this);"></a>
-忽值魏師入討，于彼南荊。既車徒之赩赫，遂一鼓而陵城。同寤生之舍許，等小白之全邢。伊社稷之不泯，實有感於恩靈。矧吾人之固陋，迥飄薄於流萍。忽沉滯於茲土，復期月而無成。昔方千而畿甸，今七里而磐縈。寡田邑而可賦，闕丘井而求兵。無河內之資待，同滎陽之未平。夜騷騷而擊柝，晝孑孑而揚旌。烽凌雲而迥照<span class="jiaozhusup">英華「凌」作「連」。「迥」原作「迥」，誤，英華作「迥」，今逕改。又疑「迥」「迥」皆「迴」之訛。</span>，馬伏櫪而悲鳴。既有懷於斯日，亦焉得而云寧。
+忽值魏師入討，于彼南荊。既車徒之赩赫，遂一鼓而陵城。同寤生之舍許，等小白之全邢。伊社稷之不泯，實有感於恩靈。矧吾人之固陋，迥飄薄於流萍。忽沉滯於茲土，復期月而無成。昔方千而畿甸，今七里而磐縈。寡田邑而可賦，闕丘井而求兵。無河內之資待，同滎陽之未平。夜騷騷而擊柝，晝孑孑而揚旌。烽凌雲而迥照，<span class="jiaozhusup">英華「凌」作「連」。「迥」原作「迥」，誤，英華作「迥」，今逕改。又疑「迥」「迥」皆「迴」之訛。</span>馬伏櫪而悲鳴。既有懷於斯日，亦焉得而云寧。
 </p>
 <p class="margin2" id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
 彼雲夢之舊都，乃標奇於昔者。驗往記而瞻今，何名高而實寡。寂寥井邑，荒涼原野。徒揄揚於宋玉，空稱嗟於司馬。南方卑而歎屈，長沙濕而悲賈。余家國之一匡，庶興周而祀夏。忽縈憂而北屈，豈年華之天假。
@@ -118,7 +118,7 @@
 詧子嶚，追諡孝惠太子；巖，封安平王；岌，東平王；岑，河間王，後改封吳郡王。巋子瓛，義興王；瑑，晉陵王；璟，臨海王；珣，南海王；瑒，義安王；瑀，新安王。
 </p>
 <p class="em2" id="p37"><a class="gg-link" href="#p37" onclick="return changeColor(this);"></a>
-詧之在藩及居帝位，以蔡大寶爲股肱，王操爲腹心，魏益德、尹正、薛暉、許孝敬、薛宣爲爪牙，甄玄成、劉盈、岑善方、傅准<span class="jiaozhusup">北史蕭氏傳「准」作「淮」。按下附傳亦作「准」，北史無傅氏附傳。</span>、褚珪、蔡大業典眾務。張綰以舊齒處顯位，沈重以儒學蒙厚禮。自餘多所獎拔，咸盡其器能。及巋纂業，親賢並用，將相則華皎、殷亮、劉忠義，宗室則蕭欣、蕭翼，民望則蕭確、謝溫、柳洋、王湜、徐岳，外戚則王凝、<span class="jiaozhusup">北史蕭氏傳「凝」作「洋」。張元濟云：「按當作『㳬』，尚廬陵長公主。」按本傳附有王㳬，當即此王凝。但其名又有紛歧，參校記第三八條。</span>王誦、殷璉，文章則劉孝勝、范迪、沈君游、君公、柳信言，政事則袁敞、柳莊、蔡延壽、甄詡、皇甫茲。故能保其疆土，而和其民人焉。
+詧之在藩及居帝位，以蔡大寶爲股肱，王操爲腹心，魏益德、尹正、薛暉、許孝敬、薛宣爲爪牙，甄玄成、劉盈、岑善方、傅准、<span class="jiaozhusup">北史蕭氏傳「准」作「淮」。按下附傳亦作「准」，北史無傅氏附傳。</span>褚珪、蔡大業典眾務。張綰以舊齒處顯位，沈重以儒學蒙厚禮。自餘多所獎拔，咸盡其器能。及巋纂業，親賢並用，將相則華皎、殷亮、劉忠義，宗室則蕭欣、蕭翼，民望則蕭確、謝溫、柳洋、王湜、徐岳，外戚則王凝、<span class="jiaozhusup">北史蕭氏傳「凝」作「洋」。張元濟云：「按當作『㳬』，尚廬陵長公主。」按本傳附有王㳬，當即此王凝。但其名又有紛歧，參校記第三八條。</span>王誦、殷璉，文章則劉孝勝、范迪、沈君游、君公、柳信言，政事則袁敞、柳莊、蔡延壽、甄詡、皇甫茲。故能保其疆土，而和其民人焉。
 </p>
 <p class="em2" id="p38"><a class="gg-link" href="#p38" onclick="return changeColor(this);"></a>
 今載詧子嶚等及蔡大寶以下尤著者，附於左。其在梁、陳、隋已有傳，及巋諸子未任職者，則不兼錄。
