--- a/OEBPS/Text/1753.html
+++ b/OEBPS/Text/1753.html
@@ -22,7 +22,7 @@
 魏廢帝元年正月，土門發兵擊茹茹，大破之於懷荒北。阿那瑰自殺，其子菴羅辰奔齊，餘眾復立阿那瑰叔父鄧叔子爲主。土門遂自號伊利可汗，猶古之單于也。號其妻爲可賀敦，亦猶古之閼氏也。土門死，子科羅立。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
-科羅號乙息記可汗。<span class="jiaozhusup">隋書卷八四突厥傳云伊利「卒，弟逸可汗立」。伊利即土門，逸可汗即科羅或乙息記可汗，作「子」作「弟」不同。</span>又破叔子於沃野北木賴山。<span class="jiaozhusup">北史本傳無「木」字。</span>二年三月，科羅遣使獻馬五萬匹。科羅死，弟俟斤立，號木汗可汗<span class="jiaozhusup">隋書本傳「木汗」作「木扞」，北史本傳作「木杆」。參卷九校記第六條。</span>。
+科羅號乙息記可汗。<span class="jiaozhusup">隋書卷八四突厥傳云伊利「卒，弟逸可汗立」。伊利即土門，逸可汗即科羅或乙息記可汗，作「子」作「弟」不同。</span>又破叔子於沃野北木賴山。<span class="jiaozhusup">北史本傳無「木」字。</span>二年三月，科羅遣使獻馬五萬匹。科羅死，弟俟斤立，號木汗可汗。<span class="jiaozhusup">隋書本傳「木汗」作「木扞」，北史本傳作「木杆」。參卷九校記第六條。</span>
 </p>
 <p class="em2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
 俟斤一名燕都，<span class="jiaozhusup">通典卷一九七「都」作「尹」。</span>狀貌多奇異，面廣尺餘，其色甚赤，眼若琉璃。性剛暴，務於征伐。乃率兵擊鄧叔子，滅之。叔子以其餘燼來奔。俟斤又西破囐噠，<span class="jiaozhusup">魏書卷一０二、北史本傳、通典卷一九七「囐」作「嚈」，魏書目錄作「厭」，隋書卷八三作「悒怛」，都是譯音之異，今後不再出校記。</span>東走契丹，北并契骨，威服塞外諸國。其地東自遼海以西，西至西海萬里，南自沙漠以北，北至北海五六千里，皆屬焉。
