--- a/OEBPS/Text/1713.html
+++ b/OEBPS/Text/1713.html
@@ -1,8 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷十·列傳第二</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
-<div class="section" id="title-0"><h1>
-列傳第二
-</h1><hr/></div>
+<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷十・列傳第二</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
+<div class="section" id="title-0"><h1>卷十・列傳第二</h1><hr/></div>
 <div class="section" id="title-1"><h2>
 <strong>邵惠公顥<span class="jiazhu">子什肥　導　（護）　什肥子冑　導子廣　亮　翼　椿　眾</span>　杞簡公連　莒莊公洛生<span class="jiazhu">子菩提</span>　虞國公仲<span class="jiazhu">子興</span></strong>
 </h2></div>
