--- a/OEBPS/Text/1722.html
+++ b/OEBPS/Text/1722.html
@@ -1,8 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷十九·列傳第十一</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
-<div class="section" id="title-0"><h1>
-列傳第十一
-</h1><hr/></div>
+<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷十九・列傳第十一</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
+<div class="section" id="title-0"><h1>卷十九・列傳第十一</h1><hr/></div>
 <div class="section" id="title-1"><h2>
 <strong>達奚武<span class="jiazhu">子震</span>　侯莫陳順　豆盧寧　宇文貴　楊忠　王雄</strong>
 </h2></div>
