--- a/OEBPS/Text/1730.html
+++ b/OEBPS/Text/1730.html
@@ -1,8 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷二十七·列傳第十九</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
-<div class="section" id="title-0"><h1>
-列傳第十九
-</h1><hr/></div>
+<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷二十七・列傳第十九</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
+<div class="section" id="title-0"><h1>卷二十七・列傳第十九</h1><hr/></div>
 <div class="section" id="title-1"><h2>
 <strong>赫連達　韓果　蔡祐　常善　辛威　厙狄昌　田弘　梁椿　梁臺　宇文測<span class="jiazhu">弟深</span></strong>
 </h2></div>
