--- a/OEBPS/Text/1734.html
+++ b/OEBPS/Text/1734.html
@@ -1,8 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷三十一·列傳第二十三</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
-<div class="section" id="title-0"><h1>
-列傳第二十三
-</h1><hr/></div>
+<html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">周書-卷三十一・列傳第二十三</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
+<div class="section" id="title-0"><h1>卷三十一・列傳第二十三</h1><hr/></div>
 <div class="section" id="title-1"><h2>
 <strong>韋孝寬　韋敻　梁士彥</strong>
 </h2></div>
