--- a/index.html
+++ b/index.html
@@ -67,105 +67,105 @@
 
   <ul class="level1">
 
-    <li><a href="OEBPS/Text/1704.html">卷一·帝紀第一</a></li>
+    <li><a href="OEBPS/Text/1704.html">卷一・帝紀第一</a></li>
 
-    <li><a href="OEBPS/Text/1705.html">卷二·帝紀第二</a></li>
+    <li><a href="OEBPS/Text/1705.html">卷二・帝紀第二</a></li>
 
-    <li><a href="OEBPS/Text/1706.html">卷三·帝紀第三</a></li>
+    <li><a href="OEBPS/Text/1706.html">卷三・帝紀第三</a></li>
 
-    <li><a href="OEBPS/Text/1707.html">卷四·帝紀第四</a></li>
+    <li><a href="OEBPS/Text/1707.html">卷四・帝紀第四</a></li>
 
-    <li><a href="OEBPS/Text/1708.html">卷五·帝紀第五</a></li>
+    <li><a href="OEBPS/Text/1708.html">卷五・帝紀第五</a></li>
 
-    <li><a href="OEBPS/Text/1709.html">卷六·帝紀第六</a></li>
+    <li><a href="OEBPS/Text/1709.html">卷六・帝紀第六</a></li>
 
-    <li><a href="OEBPS/Text/1710.html">卷七·帝紀第七</a></li>
+    <li><a href="OEBPS/Text/1710.html">卷七・帝紀第七</a></li>
 
-    <li><a href="OEBPS/Text/1711.html">卷八·帝紀第八</a></li>
+    <li><a href="OEBPS/Text/1711.html">卷八・帝紀第八</a></li>
 
-    <li><a href="OEBPS/Text/1712.html">卷九·列傳第一</a></li>
+    <li><a href="OEBPS/Text/1712.html">卷九・列傳第一</a></li>
 
-    <li><a href="OEBPS/Text/1713.html">卷十·列傳第二</a></li>
+    <li><a href="OEBPS/Text/1713.html">卷十・列傳第二</a></li>
 
-    <li><a href="OEBPS/Text/1714.html">卷十一·列傳第三</a></li>
+    <li><a href="OEBPS/Text/1714.html">卷十一・列傳第三</a></li>
 
-    <li><a href="OEBPS/Text/1715.html">卷十二·列傳第四</a></li>
+    <li><a href="OEBPS/Text/1715.html">卷十二・列傳第四</a></li>
 
-    <li><a href="OEBPS/Text/1716.html">卷十三·列傳第五</a></li>
+    <li><a href="OEBPS/Text/1716.html">卷十三・列傳第五</a></li>
 
-    <li><a href="OEBPS/Text/1717.html">卷十四·列傳第六</a></li>
+    <li><a href="OEBPS/Text/1717.html">卷十四・列傳第六</a></li>
 
-    <li><a href="OEBPS/Text/1718.html">卷十五·列傳第七</a></li>
+    <li><a href="OEBPS/Text/1718.html">卷十五・列傳第七</a></li>
 
-    <li><a href="OEBPS/Text/1719.html">卷十六·列傳第八</a></li>
+    <li><a href="OEBPS/Text/1719.html">卷十六・列傳第八</a></li>
 
-    <li><a href="OEBPS/Text/1720.html">卷十七·列傳第九</a></li>
+    <li><a href="OEBPS/Text/1720.html">卷十七・列傳第九</a></li>
 
-    <li><a href="OEBPS/Text/1721.html">卷十八·列傳第十</a></li>
+    <li><a href="OEBPS/Text/1721.html">卷十八・列傳第十</a></li>
 
-    <li><a href="OEBPS/Text/1722.html">卷十九·列傳第十一</a></li>
+    <li><a href="OEBPS/Text/1722.html">卷十九・列傳第十一</a></li>
 
-    <li><a href="OEBPS/Text/1723.html">卷二十·列傳第十二</a></li>
+    <li><a href="OEBPS/Text/1723.html">卷二十・列傳第十二</a></li>
 
-    <li><a href="OEBPS/Text/1724.html">卷二十一·列傳第十三</a></li>
+    <li><a href="OEBPS/Text/1724.html">卷二十一・列傳第十三</a></li>
 
-    <li><a href="OEBPS/Text/1725.html">卷二十二·列傳第十四</a></li>
+    <li><a href="OEBPS/Text/1725.html">卷二十二・列傳第十四</a></li>
 
-    <li><a href="OEBPS/Text/1726.html">卷二十三·列傳第十五</a></li>
+    <li><a href="OEBPS/Text/1726.html">卷二十三・列傳第十五</a></li>
 
-    <li><a href="OEBPS/Text/1727.html">卷二十四·列傳第十六</a></li>
+    <li><a href="OEBPS/Text/1727.html">卷二十四・列傳第十六</a></li>
 
-    <li><a href="OEBPS/Text/1728.html">卷二十五·列傳第十七</a></li>
+    <li><a href="OEBPS/Text/1728.html">卷二十五・列傳第十七</a></li>
 
-    <li><a href="OEBPS/Text/1729.html">卷二十六·列傳第十八</a></li>
+    <li><a href="OEBPS/Text/1729.html">卷二十六・列傳第十八</a></li>
 
-    <li><a href="OEBPS/Text/1730.html">卷二十七·列傳第十九</a></li>
+    <li><a href="OEBPS/Text/1730.html">卷二十七・列傳第十九</a></li>
 
-    <li><a href="OEBPS/Text/1731.html">卷二十八·列傳第二十</a></li>
+    <li><a href="OEBPS/Text/1731.html">卷二十八・列傳第二十</a></li>
 
-    <li><a href="OEBPS/Text/1732.html">卷二十九·列傳第二十一</a></li>
+    <li><a href="OEBPS/Text/1732.html">卷二十九・列傳第二十一</a></li>
 
-    <li><a href="OEBPS/Text/1733.html">卷三十·列傳第二十二</a></li>
+    <li><a href="OEBPS/Text/1733.html">卷三十・列傳第二十二</a></li>
 
-    <li><a href="OEBPS/Text/1734.html">卷三十一·列傳第二十三</a></li>
+    <li><a href="OEBPS/Text/1734.html">卷三十一・列傳第二十三</a></li>
 
-    <li><a href="OEBPS/Text/1735.html">卷三十二·列傳第二十四</a></li>
+    <li><a href="OEBPS/Text/1735.html">卷三十二・列傳第二十四</a></li>
 
-    <li><a href="OEBPS/Text/1736.html">卷三十三·列傳第二十五</a></li>
+    <li><a href="OEBPS/Text/1736.html">卷三十三・列傳第二十五</a></li>
 
-    <li><a href="OEBPS/Text/1737.html">卷三十四·列傳第二十六</a></li>
+    <li><a href="OEBPS/Text/1737.html">卷三十四・列傳第二十六</a></li>
 
-    <li><a href="OEBPS/Text/1738.html">卷三十五·列傳第二十七</a></li>
+    <li><a href="OEBPS/Text/1738.html">卷三十五・列傳第二十七</a></li>
 
-    <li><a href="OEBPS/Text/1739.html">卷三十六·列傳第二十八</a></li>
+    <li><a href="OEBPS/Text/1739.html">卷三十六・列傳第二十八</a></li>
 
-    <li><a href="OEBPS/Text/1740.html">卷三十七·列傳第二十九</a></li>
+    <li><a href="OEBPS/Text/1740.html">卷三十七・列傳第二十九</a></li>
 
-    <li><a href="OEBPS/Text/1741.html">卷三十八·列傳第三十</a></li>
+    <li><a href="OEBPS/Text/1741.html">卷三十八・列傳第三十</a></li>
 
-    <li><a href="OEBPS/Text/1742.html">卷三十九·列傳第三十一</a></li>
+    <li><a href="OEBPS/Text/1742.html">卷三十九・列傳第三十一</a></li>
 
-    <li><a href="OEBPS/Text/1743.html">卷四十·列傳第三十二</a></li>
+    <li><a href="OEBPS/Text/1743.html">卷四十・列傳第三十二</a></li>
 
-    <li><a href="OEBPS/Text/1744.html">卷四十一·列傳第三十三</a></li>
+    <li><a href="OEBPS/Text/1744.html">卷四十一・列傳第三十三</a></li>
 
-    <li><a href="OEBPS/Text/1745.html">卷四十二·列傳第三十四</a></li>
+    <li><a href="OEBPS/Text/1745.html">卷四十二・列傳第三十四</a></li>
 
-    <li><a href="OEBPS/Text/1746.html">卷四十三·列傳第三十五</a></li>
+    <li><a href="OEBPS/Text/1746.html">卷四十三・列傳第三十五</a></li>
 
-    <li><a href="OEBPS/Text/1747.html">卷四十四·列傳第三十六</a></li>
+    <li><a href="OEBPS/Text/1747.html">卷四十四・列傳第三十六</a></li>
 
-    <li><a href="OEBPS/Text/1748.html">卷四十五·列傳第三十七</a></li>
+    <li><a href="OEBPS/Text/1748.html">卷四十五・列傳第三十七</a></li>
 
-    <li><a href="OEBPS/Text/1749.html">卷四十六·列傳第三十八</a></li>
+    <li><a href="OEBPS/Text/1749.html">卷四十六・列傳第三十八</a></li>
 
-    <li><a href="OEBPS/Text/1750.html">卷四十七·列傳第三十九</a></li>
+    <li><a href="OEBPS/Text/1750.html">卷四十七・列傳第三十九</a></li>
 
-    <li><a href="OEBPS/Text/1751.html">卷四十八·列傳第四十</a></li>
+    <li><a href="OEBPS/Text/1751.html">卷四十八・列傳第四十</a></li>
 
-    <li><a href="OEBPS/Text/1752.html">卷四十九·列傳第四十一</a></li>
+    <li><a href="OEBPS/Text/1752.html">卷四十九・列傳第四十一</a></li>
 
-    <li><a href="OEBPS/Text/1753.html">卷五十·列傳第四十二</a></li>
+    <li><a href="OEBPS/Text/1753.html">卷五十・列傳第四十二</a></li>
 
   </ul>
 
