--- a/OEBPS/Text/1712.html
+++ b/OEBPS/Text/1712.html
@@ -47,7 +47,7 @@
 宣帝朱皇后名滿月，吳人也。其家坐事，沒入東宮。帝之爲太子，后被選掌帝衣服。帝年少，召而幸之，遂生靜帝。大象元年，立爲天元帝后，尋改爲天皇后。二年，又改爲天大皇后。冊曰：「咨爾彌宣四德，訓範六宮，軒庭列序，堯門表慶，嘉稱既降，盛典宜膺。爾其飾性履道，無愆禮正，永固休祉，可不慎歟。」后本非良家子，又年長於帝十餘歲，疏賤無寵。以靜帝故，特尊崇之，班亞楊皇后焉。宣帝崩，靜帝尊爲帝太（皇）后。<span class="jiaozhusup">北史卷一四后妃傳下「太」下無「皇」字。張森楷云：「北史是。」按卷八靜帝紀正作「帝太后」，「皇」字衍，今據刪。</span>隋開皇元年，出俗爲尼，名法淨。六年殂，年四十，以尼禮葬京城。
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
-宣帝陳皇后名月儀，自云潁川人，大將軍山提第八女也。大象元年六月，以選入宮，拜爲德妃。月餘，立爲天左皇后。二年二月，改天左大皇后。冊曰：「咨爾儀範柔閑，操履凝潔，淑問彰於遠近，令則冠於宮闈。是用申彼寵章，加茲徽號。爾其復禮問詩，披圖顧史，永隆嘉命，可不慎歟。」三月，又詔曰：「正內之重，風化之基，嘉耦之制，代多殊典。軒、嚳繼軌，<span class="jiaozhusup">宋本「軌」作「{𥫗/軌}」，不成字，當是「範」之訛。</span>次妃並四；虞舜受命，厥娶猶三。禮非相襲，隨時不無。朕祗承寶圖，載弘徽號，自我改作，超革先古。曰天元居極，五帝所以仰崇；王者稱尊，列后於焉上儷。且坤儀比德，土數惟五，既縟恆典，宜取斯儀。四大皇后外，可增置天中大皇后一人。天中大皇后爰主粢盛，<span class="jiaozhusup">按這是陳月儀由天左改冊天中的冊文，「爰主粢盛」云云是贊揚陳未改冊時的話，疑「中」當作「左」。</span>徽音日躋，肇建嘉名，宜膺顯冊。」於是以后爲天中大皇后。帝崩，后出家爲尼，改名華光。
+宣帝陳皇后名月儀，自云潁川人，大將軍山提第八女也。大象元年六月，以選入宮，拜爲德妃。月餘，立爲天左皇后。二年二月，改天左大皇后。冊曰：「咨爾儀範柔閑，操履凝潔，淑問彰於遠近，令則冠於宮闈。是用申彼寵章，加茲徽號。爾其復禮問詩，披圖顧史，永隆嘉命，可不慎歟。」三月，又詔曰：「正內之重，風化之基，嘉耦之制，代多殊典。軒、嚳繼軌，<span class="jiaozhusup">宋本「軌」作「󽛁」，不成字，當是「範」之訛。</span>次妃並四；虞舜受命，厥娶猶三。禮非相襲，隨時不無。朕祗承寶圖，載弘徽號，自我改作，超革先古。曰天元居極，五帝所以仰崇；王者稱尊，列后於焉上儷。且坤儀比德，土數惟五，既縟恆典，宜取斯儀。四大皇后外，可增置天中大皇后一人。天中大皇后爰主粢盛，<span class="jiaozhusup">按這是陳月儀由天左改冊天中的冊文，「爰主粢盛」云云是贊揚陳未改冊時的話，疑「中」當作「左」。</span>徽音日躋，肇建嘉名，宜膺顯冊。」於是以后爲天中大皇后。帝崩，后出家爲尼，改名華光。
 </p>
 <p class="em2" id="p14"><a class="gg-link" href="#p14" onclick="return changeColor(this);"></a>
 后父山提本高氏之隸。<span class="jiaozhusup">殿本考證云：「北史（卷一四后妃傳下）作本爾朱兆之隸，未知孰是。」按御覽卷一四０同北史。張森楷云：「二史皆是也。山提初爲兆隸，兆使殺己，不從。兆死，轉事高歡爲蒼頭。各據一端而言，其實非有二也。」張所云出北齊書卷二五張亮傳，卷五０恩倖傳。</span>仕齊，官至特進、開府、東兗州刺史、謝陽王。高祖平齊，拜大將軍，封（浙）〔淅〕陽郡公。<span class="jiaozhusup">張森楷云：「『浙』當作『淅』，北史（卷一四后妃傳下）正作『淅』。」按張說是，今據改。</span>大象元年，以后父超授上柱國，進封鄅國公，除大宗伯。
