--- a/OEBPS/Text/1745.html
+++ b/OEBPS/Text/1745.html
@@ -167,7 +167,7 @@
 岳陽王蕭察蒞雍州，選爲治中，尋遷別駕。及察於襄陽承制，授霞吏部郎、員外散騎常侍。俄遷車騎大將軍、儀同三司、大都督，賜爵聞喜縣公。尋進位持節、侍中、驃騎大將軍、開府儀同三司。及蕭察踐帝位於江陵，以襄陽歸于我。霞乃辭察曰：「陛下中興鼎運，龍飛舊楚。臣昔因幸會，早奉名節，理當以身許國，期之始終。自晉氏南遷，臣宗族蓋寡。從祖太尉、世父儀同、從父司空，並以位望隆重，遂家于金陵。唯留先臣，獨守墳柏。常誡臣等，使不違此志。今襄陽既入北朝，臣若陪隨鑾蹕，進則無益塵露，退則有虧先旨。伏願曲垂照鑒，亮臣此心。」察重違其志，遂許之。因留鄉里，以經籍自娛。
 </p>
 <p class="em2" id="p54"><a class="gg-link" href="#p54" onclick="return changeColor(this);"></a>
-太祖、世宗頻有徵命，霞固辭以疾。及察殂，霞舉哀，行舊君之服。保定中又徵之，霞始入朝。授使持節、驃騎大將軍、開府儀同三司、霍州諸軍事、霍州刺史。霞導民務先以德，再三不用命者，乃微加貶異，示之恥而已。其下感而化之，不復爲過。咸曰；「我君仁惠如此，其可欺乎！」天和中，卒，時年七十二。宣政初，贈（{貝崟}）〔金〕、安二州刺史。<span class="jiaozhusup">宋本「{貝崟}」作「{貝(厶/金)}」，北史本傳作「金」。張元濟云：「按金州即東梁州。字書無『{貝崟}』『{貝(厶/金)}』字。」按金州見隋書卷二九地理志上西城郡。「{貝崟}」「{貝(厶/金)}」當是涉上「贈」字而誤，今據改。</span>
+太祖、世宗頻有徵命，霞固辭以疾。及察殂，霞舉哀，行舊君之服。保定中又徵之，霞始入朝。授使持節、驃騎大將軍、開府儀同三司、霍州諸軍事、霍州刺史。霞導民務先以德，再三不用命者，乃微加貶異，示之恥而已。其下感而化之，不復爲過。咸曰；「我君仁惠如此，其可欺乎！」天和中，卒，時年七十二。宣政初，贈（<img class="font-img" src="../Images/1745.png"/>）〔金〕、安二州刺史。<span class="jiaozhusup">宋本「<img class="font-zhu-img" src="../Images/1745.png"/>」作「<img class="font-zhu-img" src="../Images/1745-1.png"/>」，北史本傳作「金」。張元濟云：「按金州即東梁州。字書無『<img class="font-zhu-img" src="../Images/1745.png"/>』『<img class="font-zhu-img" src="../Images/1745-1.png"/>』字。」按金州見隋書卷二九地理志上西城郡。「<img class="font-zhu-img" src="../Images/1745.png"/>」「<img class="font-zhu-img" src="../Images/1745-1.png"/>」當是涉上「贈」字而誤，今據改。</span>
 </p>
 <p class="em2" id="p55"><a class="gg-link" href="#p55" onclick="return changeColor(this);"></a>
 霞有志行。初爲州主簿，其父卒於揚州，霞自襄陽奔赴，六日而至。哀感行路，毀瘁殆不可識。後奉喪泝江西歸，中流風起，舟中之人，相顧失色。霞抱棺號慟，愬天求哀，俄頃之間，風浪止息。其母嘗乳間發疽，醫云：「此病無可救之理，唯得人吮膿，或望微止其痛。」霞應聲即吮，旬日遂瘳。咸以爲孝感所致。性又溫裕，略無喜慍之容。弘獎名教，未嘗論人之短。尤好施與，家無餘財。臨終遺誡薄葬，其子等並奉行之。有十子，靖、莊最知名。
